@@ -13,7 +13,7 @@ Vcs-Browser: http://svn.debian.org/viewsvn/python-apps/packages/pylint/trunk/
 
 Package: pylint
 Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}, python-logilab-common (>= 0.39.0), python-logilab-astng (>= 0.19.0)
+Depends: ${python:Depends}, ${misc:Depends}, python-logilab-common (>= 0.39.0), python-logilab-astng (>= 0.19.1)
 Recommends: python-tk
 XB-Python-Version: ${python:Versions}
 Conflicts: python2.2-pylint, python2.3-pylint, python2.4-pylint, pylint-common, pylint-test
@@ -31,9 +31,9 @@ Description: python code static checker and UML diagram generator
  and much more.
  .
  Additionally, it is possible to write plugins to add your own checks.
- . 
- The included command pyreverse generates UML class and package 
+ .
+ The included command pyreverse generates UML class and package
  diagrams.
- . 
+ .
  The recommended python-tk package is only for using the pylint-gui
  script.
