@@ -1,2 +1,2 @@
-F:  3: Unable to import 'whatever' (No module named whatever)
+F:  3: Unable to import 'whatever'
 W:  3: Unused import whatever
