@@ -1,2 +1,2 @@
-F: 11: Unable to import 'stringfile' (No module named stringfile)
+F: 11: Unable to import 'stringfile'
 W:  8: Uses of a deprecated module 'Bastion' 
