@@ -1,1 +1,1 @@
-W:  6: Relative import 'func_w0302'
+W:  6: Relative import 'func_w0302', should be 'input.func_w0302'
