@@ -1,2 +1,1 @@
 W:  5: Module import itself
-W:  5: Relative import 'func_w0406'
