@@ -3,9 +3,10 @@ ChangeLog for PyLint
 
 --
     * improved flymake code and doc provided by Derek Harland
+    * refactor & fix the imports checker
     * fix #8764: More than one statement on a single line false positive with
       try/except/finally
-	* Nathaniel's fix for w0108 false positive
+    * Nathaniel's fix for w0108 false positive
 
 2009-03-25  --  0.18.0
     * tests ok with python 2.4, 2.5, 2.6. 2.3 not tested
